--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,7 @@ dev/mp3/
 dev/CLIP_SPORT/
 dev/CLIP_SPORT_save/
 dev/CLIP_SPORT_save_A_B/
+dev/itunes-mac/
+dev/itunes-pc/
+dev/itunes-pc/**
+dev/itunes-mac/**
